[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "niklib"
authors = [{ name = "Nikan Doosti", email = "nikan.doosti@outlook.com" }]
description = "Copypasta of Nikronic"
readme = "README.md"
keywords = ["std", "data-science", "machine-learning"]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]

requires-python = ">=3.10.6"
dependencies = [
    "pip>=23.1.2",
    "pandas>=1.5.3",
    "xmltodict>=0.13.0",
    "pikepdf>=8.2.1",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.8.2",
    "pydantic>=2.0.3",
    "fastapi>=0.100.0",
    "gunicorn>=21.2.0",
    "uvicorn>=0.23.1",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.2.0",
    "flaml>=1.0.13",
    "catboost>=1.1.1",
    "sqlalchemy>=1.4.44",
    "mlflow>=1.30.0",
    "enlighten>=1.11.1",
    "dvc>=2.10.2",
    "matplotlib>=3.6.2",
    "xgboost>=1.7.1",
    "lightgbm>=3.3.3",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.optional-dependencies]
doc = [
    "sphinx>=7.2.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autodoc-typehints>=1.19.5",
    "myst-parser>=2.0.0",
    "furo>=2023.8.19"
]

[tool.setuptools]
include-package-data = true
[tool.setuptools.packages.find]
where = ["niklib"]
[tool.setuptools.package-data]
mypkg = ["*.csv", "*.json"]

[project.urls]
Homepage = "https://nikronic.com/niklib"
